--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+#ignore Gemfile discrepencies
+/Gemfile
+/Gemfile.lock
+.gitignore
+
 # Ignore bundler config.
 /.bundle
 
