--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,8 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-#ignore Gemfile discrepencies
-Gemfile
-Gemfile.lock
-.gitignore
+# Ignore dotenv content
+.env
 
 # Ignore bundler config.
 /.bundle
