--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   username: postgres
-  password: Smile#13
+  password: <%= ENV['PASSWORD'] %>
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
